--- a/core/templates/network/index.html
+++ b/core/templates/network/index.html
@@ -1,4 +1,4 @@
-{% extends 'network/layout.html' %}
+{% extends "layouts/layout.html" %}
 {% load static %}
 
 {% block title %}
@@ -39,23 +39,23 @@
                         {% if not post.already_liked %}
                             <button class="post__btn-like"  value="{{ post.id }}" data-liked="0">
                                 <p class="post__like-counter" data-id="{{ post.id }}">{{ post.likes_count }}</p>
-                                <img  src="{% static 'network/img/heart-empty.svg'%}" class="post__icons" width="100px" alt="Like button">
+                                <img  src="{% static '/img/heart-empty.svg'%}" class="post__icons" width="100px" alt="Like button">
                             </button>
                         {% else %}
                             <button class="post__btn-like" value="{{ post.id }}" data-liked="1">
                                 <p class="post__like-counter" data-id="{{ post.id }}">{{ post.likes_count }}</p>
-                                <img  src="{% static 'network/img/heart-full.svg'%}" class="post__icons" width="100px" alt="Unlike button">
+                                <img  src="{% static '/img/heart-full.svg'%}" class="post__icons" width="100px" alt="Unlike button">
                             </button>
                         {% endif %}
                         {% if post.user == user %}
                             <button class="post__btn-edit" data-id="{{ post.id }}">
-                                <img  src="{% static 'network/img/edit.svg'%}" class="post__icons" width="100px" alt="Edit post">
+                                <img  src="{% static '/img/edit.svg'%}" class="post__icons" width="100px" alt="Edit post">
                             </button>
                         {% endif %}
                         {% if user.is_authenticated %}
                         <button class="post__btn-comments" value="{{ post.id }}">
                             <p class="post__comment-counter" data-id="{{ post.id }}">{{ post.comments_count }}</p>
-                            <img  src="{% static 'network/img/comment-white.svg'%}" class="post__icons" width="100px" alt="Read comments">
+                            <img  src="{% static '/img/comment-white.svg'%}" class="post__icons" width="100px" alt="Read comments">
                         </button>
                         {% endif %}
                     </div>
@@ -75,10 +75,10 @@
         <span class="step-links">
             {% if page.has_previous %}
                 <a href="?page=1">
-                    <img  src="{% static 'network/img/track-back.svg'%}" class="post__icons" width="100px" alt="First">
+                    <img  src="{% static '/img/track-back.svg'%}" class="post__icons" width="100px" alt="First">
                 </a>
                 <a href="?page={{ page.previous_page_number }}">
-                    <img  src="{% static 'network/img/arrow-left.svg'%}" class="post__icons" width="100px" alt="Previuos">
+                    <img  src="{% static '/img/arrow-left.svg'%}" class="post__icons" width="100px" alt="Previuos">
                 </a>
             {% endif %}
     
@@ -88,10 +88,10 @@
     
             {% if page.has_next %}
                 <a href="?page={{ page.next_page_number }}">
-                    <img  src="{% static 'network/img/arrow-right.svg'%}" class="post__icons" width="100px" alt="Next">
+                    <img  src="{% static '/img/arrow-right.svg'%}" class="post__icons" width="100px" alt="Next">
                 </a>
                 <a href="?page={{ page.paginator.num_pages }}">
-                    <img  src="{% static 'network/img/track-next.svg'%}" class="post__icons" width="100px" alt="Last">
+                    <img  src="{% static '/img/track-next.svg'%}" class="post__icons" width="100px" alt="Last">
                 </a>
             {% endif %}
         </span>
@@ -101,5 +101,5 @@
 {% endblock %}
 
 {% block script %}
-  <script src="{% static 'network/app.js' %}"></script>
+  <script src="{% static '/app.js' %}"></script>
 {% endblock %}
