--- a/core/static/styles.css
+++ b/core/static/styles.css
@@ -43,14 +43,24 @@ body {
     font-size: 1.6rem;
 
     position: relative;
-    padding-top: 185px;
+    padding-top: 260px;
+    
+    @media (min-width: 768px) {
+        padding-top: 185px;
+        
+    }
 }
 
 main {
-    padding: 5rem 2rem;
+    padding: 5rem 1rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    
+    @media (min-width: 768px) {
+        padding: 5rem 2rem;
+        
+    }
 }
 
 h1, h2, h3, h4, p {
@@ -83,12 +93,25 @@ textarea {
     color: var(--redAlert);
 }
 
+.c-blue {
+    color: var(--blue);
+}
+
+.c-blue:hover {
+    color: var(--darkBlue);
+}
+
 /* Components */
 .heading { 
-    font-size: 4rem;
     text-align: center;
     color: var(--blue);
     margin-bottom: 2rem;
+    font-size: 3rem;
+    
+    @media (min-width: 768px) {
+        font-size: 4rem;
+        
+    }
 }
 
 .heading-left { 
@@ -121,20 +144,29 @@ textarea {
     text-align: center;
     color: var(--white);
     background-color: var(--silver);
-    font-size: 2rem;
+    font-size: 1.8rem;
 }
 
 .btn {
     border: none;
     background-color: var(--blue);
-    padding: 1rem 3rem;
     text-transform: uppercase;
     font-weight: 700;
     color: var(--white);
-    font-size: 2rem;
-    border-radius: 1.5rem;
     cursor: pointer;
     transition: background-color .5s ease;
+    
+    padding: 1rem 2rem;
+    font-size: 1.8rem;
+    border-radius: 1.2rem;
+    width: 100%;
+    
+    @media (min-width: 768px) {
+        padding: 1rem 3rem;
+        font-size: 2rem;
+        border-radius: 1.5rem;
+        width: fit-content;
+    }
 }
 
 .btn:hover {
@@ -176,13 +208,30 @@ textarea {
 .header__nav-container {
     display: flex;
     justify-content: space-between;
+
     align-items: center;
+
+    @media (min-width: 768px) {
+        flex-direction: row;
+    }
+
+
+
 }
 
 .header__nav {
     display: flex;
     gap: 2rem;
     padding: 2rem 0;
+    font-size: 1.6rem;
+
+    flex-direction: column;
+    align-items: center;
+
+    @media (min-width: 768px) {
+        flex-direction: row;
+    }
+
 }
 
 .header__nav-link {
@@ -242,6 +291,7 @@ textarea {
     display: flex;
     justify-content: center;
     margin: 5rem 0;
+
 }
 
 .form__container--auth {
@@ -255,13 +305,20 @@ textarea {
 .form {
     display: flex;
     flex-direction: column;
-    width: 60%;
+    width: 100%;
     gap: 2rem;
+    
+    
+    @media (min-width: 768px) {
+        width: 60%;
+        
+    }
 }
 
 .form__container-btn {
     display: flex;
     justify-content: flex-end;
+    
 }
 
 .form__input {
@@ -272,6 +329,7 @@ textarea {
     border-radius: .5rem;
     resize: none;
     width: 100%;
+
 }
 
 .form__input:focus {
@@ -279,7 +337,7 @@ textarea {
 }
 
 .form__opts {
-    margin-top: 5rem;
+
     text-align: center;
     > a {
         color: var(--blue);
@@ -306,15 +364,26 @@ textarea {
 .post__cards-list {
     display: flex;
     gap: 2rem;
-    margin: 1rem 15rem;
+    margin: 1rem 1rem;
     flex-direction: column;
     list-style-type: none;
     padding: 0;
+    
+    @media (min-width: 768px) {
+        margin: 1rem 15rem;
+        
+    }
 }
 .post__card {
     border: 1px solid var(--lightGray);
     padding: 2rem;
     border-radius: 1rem;
+    font-size: 1.4rem;
+    
+    @media (min-width: 768px) {
+        font-size: 1.6rem;
+        
+    }
 
 }
 
@@ -335,8 +404,13 @@ textarea {
 
 .post__content {
     text-align: left;
-    margin: 4rem;
+    margin: 2rem .5rem;
     color: var(--ivory);
+    min-height: 10rem;
+
+    @media (min-width: 768px) {
+        margin: 4rem;
+    }
 }
 
 .post__btns-container {
@@ -565,4 +639,56 @@ textarea {
 
 .profile__btn-icon {
     width: 3rem;
+}
+
+
+
+/** Auth */
+
+.form__opts-container {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    gap: 3rem;
+    margin-top: 2rem;
+
+    @media (min-width: 768px) {
+        flex-direction: row;
+        margin-top: 5rem;
+    }
+}
+
+.form__pass-val {
+    display: grid;
+    grid-template-columns: 1fr;
+    
+    @media (min-width: 768px) {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+.form__pass-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    p {
+        font-size: 1.4rem;
+    }
+}
+
+.form__pass-icon {
+    width: 4rem;
+    padding: 1rem;
+}
+
+
+.btn-disabled {
+    background-color: var(--lightSilver)!important;
+    color: var(--lightSilver)!important;
+    cursor: not-allowed!important;
+}
+.btn-disabled:hover {
+    background-color: var(--lightSilver)!important;
+    cursor: not-allowed!important;
 }
